objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Vehicle_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vehical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>